# lambda-slack-notifier

./: .gitignore  Cargo.toml  Dockerfile  LICENSE.txt  Makefile  README.md  event.example.json  template.example.json
.circleci/: config.yml
.github/workflows/: release.yml
src/: main.rs
